Fix alignment, remove redundant code

--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -1,16 +1,18 @@
 .hello {
     height: 90vh;
-    gap: 10em;
+    align-items: center;
+    padding: 0 7.5em;
 } .hello-left, .hello-right {
     width: 40vw;
 }
 
 /* Set image size */
-.hello-right > img {
+.hello-right {
     width: 35vw;
     border-radius: 1em;
     object-fit: cover;
     border: 0.5em solid white;
+    margin-left: auto;
 }
 
 /* Style left side */
